# scrapper

./: pyproject.toml
data/: Amazon Scraping - Ultimate Test.csv
results/: output.csv
scrapper/: get_urls.py  main.py
