[tool.poetry]
name = "scrapper"
version = "0.1.0"
description = ""
authors = ["Lucas Pereira"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
polars = "^0.20.25"
beautifulsoup4 = "^4.12.3"
loguru = "^0.7.2"
gspread = "^6.1.0"
oauth2client = "^4.1.3"
pathlib = "^1.0.1"
xlsx2csv = "^0.8.2"
fake-useragent = "^1.5.1"
lxml = "^5.2.2"
selenium = "^4.20.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
